CompilerPascal/y.output
状态 147conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: program_head routine DOT

    2 program_head: PROGRAM id SEMI

    3 routine: routine_head routine_body

    4 routine_head: label_part const_part type_part var_part routine_part

    5 label_part: %empty

    6 const_part: CONST const_expr_list
    7           | %empty

    8 const_expr_list: id EQUAL const_value SEMI const_expr_list
    9                | id EQUAL const_value SEMI
   10                | error_stmt const_expr_list
   11                | error_stmt

   12 const_value: INTEGER
   13            | REAL
   14            | CHAR
   15            | STRING
   16            | sys_con

   17 type_part: TYPE type_decl_list
   18          | %empty

   19 type_decl_list: type_definition type_decl_list
   20               | type_definition
   21               | error_stmt type_decl_list
   22               | error_stmt

   23 type_definition: id EQUAL type_decl SEMI

   24 type_decl: simple_type_decl
   25          | array_type_decl
   26          | record_type_decl

   27 simple_type_decl: sys_type
   28                 | id
   29                 | LP name_list RP
   30                 | const_value DOTDOT const_value
   31                 | MINUS const_value DOTDOT const_value
   32                 | MINUS const_value DOTDOT MINUS const_value
   33                 | id DOTDOT id

   34 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   35 record_type_decl: RECORD field_decl_list END

   36 field_decl_list: field_decl field_decl_list
   37                | field_decl

   38 field_decl: name_list COLON type_decl SEMI

   39 name_list: name_list COMMA id
   40          | id

   41 var_part: VAR var_decl_list
   42         | %empty

   43 var_decl_list: var_decl var_decl_list
   44              | var_decl
   45              | error_stmt var_decl_list
   46              | error_stmt

   47 var_decl: name_list COLON type_decl SEMI

   48 routine_part: function_decl routine_part
   49             | procedure_decl routine_part
   50             | %empty

   51 function_decl: function_head SEMI sub_routine SEMI

   52 function_head: FUNCTION id parameters COLON simple_type_decl

   53 procedure_decl: procedure_head SEMI sub_routine SEMI

   54 procedure_head: PROCEDURE id parameters

   55 sub_routine: routine_head routine_body

   56 parameters: LP para_decl_list RP
   57           | %empty

   58 para_decl_list: para_decl_list SEMI para_type_list
   59               | para_type_list

   60 para_type_list: var_para_list COLON simple_type_decl
   61               | val_para_list COLON simple_type_decl

   62 var_para_list: VAR name_list

   63 val_para_list: name_list

   64 routine_body: compound_stmt

   65 compound_stmt: BEGIN_T stmt_list END

   66 stmt_list: stmt SEMI stmt_list
   67          | %empty
   68          | error_stmt stmt_list

   69 stmt: INTEGER COLON non_label_stmt
   70     | non_label_stmt

   71 non_label_stmt: assign_stmt
   72               | proc_stmt
   73               | compound_stmt
   74               | if_stmt
   75               | repeat_stmt
   76               | while_stmt
   77               | for_stmt
   78               | case_stmt
   79               | goto_stmt

   80 assign_stmt: id ASSIGN expression
   81            | id LB expression RB ASSIGN expression
   82            | id DOT id ASSIGN expression

   83 proc_stmt: id
   84          | id LP args_list RP
   85          | sys_proc
   86          | sys_proc LP expression_list RP
   87          | READ LP factor RP

   88 if_stmt: IF expression THEN stmt else_clause

   89 else_clause: ELSE stmt
   90            | %empty

   91 repeat_stmt: REPEAT stmt UNTIL expression

   92 while_stmt: WHILE expression DO stmt

   93 for_stmt: FOR id ASSIGN expression direction expression DO stmt

   94 direction: TO
   95          | DOWNTO

   96 case_stmt: CASE expression OF case_expr_list END

   97 case_expr_list: case_expr case_expr_list
   98               | case_expr

   99 case_expr: const_value COLON stmt SEMI
  100          | id COLON stmt SEMI

  101 goto_stmt: GOTO INTEGER

  102 expression_list: expression COMMA expression_list
  103                | expression

  104 expression: expression GE expr
  105           | expression GT expr
  106           | expression LE expr
  107           | expression LT expr
  108           | expression EQUAL expr
  109           | expression UNEQUAL expr
  110           | expr

  111 expr: expr PLUS term
  112     | expr MINUS term
  113     | expr OR term
  114     | term

  115 term: term MUL factor
  116     | term INTDIV factor
  117     | term REALDIV factor
  118     | term MOD factor
  119     | term AND factor
  120     | factor

  121 factor: id
  122       | id LP args_list RP
  123       | sys_funct
  124       | sys_funct LP args_list RP
  125       | const_value
  126       | LP expression RP
  127       | NOT factor
  128       | MINUS factor
  129       | id LB expression RB
  130       | id DOT id

  131 args_list: args_list COMMA expression
  132          | expression

  133 id: ID

  134 sys_con: SYS_CON

  135 sys_funct: SYS_FUNCT

  136 sys_proc: SYS_PROC

  137 sys_type: SYS_TYPE

  138 error_stmt: error SEMI


Terminals, with rules where they appear

$end (0) 0
error (256) 138
LP (258) 29 56 84 86 87 122 124 126
RP (259) 29 56 84 86 87 122 124 126
LB (260) 34 81 129
RB (261) 34 81 129
DOT (262) 1 82 130
COMMA (263) 39 102 131
COLON (264) 38 47 52 60 61 69 99 100
SEMI (265) 2 8 9 23 38 47 51 53 58 66 99 100 138
PLUS (266) 111
MINUS (267) 31 32 112 128
MUL (268) 115
REALDIV (269) 117
INTDIV (270) 116
MOD (271) 118
AND (272) 119
OR (273) 113
NOT (274) 127
GE (275) 104
GT (276) 105
LE (277) 106
LT (278) 107
EQUAL (279) 8 9 23 108
UNEQUAL (280) 109
ASSIGN (281) 80 81 82 93
PROGRAM (282) 2
FUNCTION (283) 52
PROCEDURE (284) 54
BEGIN_T (285) 65
END (286) 35 65 96
TYPE (287) 17
ARRAY (288) 34
OF (289) 34 96
RECORD (290) 35
VAR (291) 41 62
IF (292) 88
THEN (293) 88
ELSE (294) 89
REPEAT (295) 91
TO (296) 94
DOWNTO (297) 95
UNTIL (298) 91
WHILE (299) 92
DO (300) 92 93
FOR (301) 93
CASE (302) 96
GOTO (303) 101
READ (304) 87
CONST (305) 6
DOTDOT (306) 30 31 32 33
INTEGER (307) 12 69 101
REAL (308) 13
CHAR (309) 14
ID (310) 133
STRING (311) 15
SYS_CON (312) 134
SYS_FUNCT (313) 135
SYS_PROC (314) 136
SYS_TYPE (315) 137


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
program_head (63)
    on left: 2, on right: 1
routine (64)
    on left: 3, on right: 1
routine_head (65)
    on left: 4, on right: 3 55
label_part (66)
    on left: 5, on right: 4
const_part (67)
    on left: 6 7, on right: 4
const_expr_list (68)
    on left: 8 9 10 11, on right: 6 8 10
const_value (69)
    on left: 12 13 14 15 16, on right: 8 9 30 31 32 99 125
type_part (70)
    on left: 17 18, on right: 4
type_decl_list (71)
    on left: 19 20 21 22, on right: 17 19 21
type_definition (72)
    on left: 23, on right: 19 20
type_decl (73)
    on left: 24 25 26, on right: 23 34 38 47
simple_type_decl (74)
    on left: 27 28 29 30 31 32 33, on right: 24 34 52 60 61
array_type_decl (75)
    on left: 34, on right: 25
record_type_decl (76)
    on left: 35, on right: 26
field_decl_list (77)
    on left: 36 37, on right: 35 36
field_decl (78)
    on left: 38, on right: 36 37
name_list (79)
    on left: 39 40, on right: 29 38 39 47 62 63
var_part (80)
    on left: 41 42, on right: 4
var_decl_list (81)
    on left: 43 44 45 46, on right: 41 43 45
var_decl (82)
    on left: 47, on right: 43 44
routine_part (83)
    on left: 48 49 50, on right: 4 48 49
function_decl (84)
    on left: 51, on right: 48
function_head (85)
    on left: 52, on right: 51
procedure_decl (86)
    on left: 53, on right: 49
procedure_head (87)
    on left: 54, on right: 53
sub_routine (88)
    on left: 55, on right: 51 53
parameters (89)
    on left: 56 57, on right: 52 54
para_decl_list (90)
    on left: 58 59, on right: 56 58
para_type_list (91)
    on left: 60 61, on right: 58 59
var_para_list (92)
    on left: 62, on right: 60
val_para_list (93)
    on left: 63, on right: 61
routine_body (94)
    on left: 64, on right: 3 55
compound_stmt (95)
    on left: 65, on right: 64 73
stmt_list (96)
    on left: 66 67 68, on right: 65 66 68
stmt (97)
    on left: 69 70, on right: 66 88 89 91 92 93 99 100
non_label_stmt (98)
    on left: 71 72 73 74 75 76 77 78 79, on right: 69 70
assign_stmt (99)
    on left: 80 81 82, on right: 71
proc_stmt (100)
    on left: 83 84 85 86 87, on right: 72
if_stmt (101)
    on left: 88, on right: 74
else_clause (102)
    on left: 89 90, on right: 88
repeat_stmt (103)
    on left: 91, on right: 75
while_stmt (104)
    on left: 92, on right: 76
for_stmt (105)
    on left: 93, on right: 77
direction (106)
    on left: 94 95, on right: 93
case_stmt (107)
    on left: 96, on right: 78
case_expr_list (108)
    on left: 97 98, on right: 96 97
case_expr (109)
    on left: 99 100, on right: 97 98
goto_stmt (110)
    on left: 101, on right: 79
expression_list (111)
    on left: 102 103, on right: 86 102
expression (112)
    on left: 104 105 106 107 108 109 110, on right: 80 81 82 88 91
    92 93 96 102 103 104 105 106 107 108 109 126 129 131 132
expr (113)
    on left: 111 112 113 114, on right: 104 105 106 107 108 109 110
    111 112 113
term (114)
    on left: 115 116 117 118 119 120, on right: 111 112 113 114 115
    116 117 118 119
factor (115)
    on left: 121 122 123 124 125 126 127 128 129 130, on right: 87
    115 116 117 118 119 120 127 128
args_list (116)
    on left: 131 132, on right: 84 122 124 131
id (117)
    on left: 133, on right: 2 8 9 23 28 33 39 40 52 54 80 81 82 83
    84 93 100 121 122 129 130
sys_con (118)
    on left: 134, on right: 16
sys_funct (119)
    on left: 135, on right: 123 124
sys_proc (120)
    on left: 136, on right: 85 86
sys_type (121)
    on left: 137, on right: 27
error_stmt (122)
    on left: 138, on right: 10 11 21 22 45 46 68


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       转到状态 2
    program_head  转到状态 3


State 1

    2 program_head: PROGRAM . id SEMI

    ID  shift, and go to state 4

    id  转到状态 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: program_head . routine DOT

    $default  reduce using rule 5 (label_part)

    routine       转到状态 7
    routine_head  转到状态 8
    label_part    转到状态 9


State 4

  133 id: ID .

    $default  reduce using rule 133 (id)


State 5

    2 program_head: PROGRAM id . SEMI

    SEMI  shift, and go to state 10


State 6

    0 $accept: program $end .

    $default  接受


State 7

    1 program: program_head routine . DOT

    DOT  shift, and go to state 11


State 8

    3 routine: routine_head . routine_body

    BEGIN_T  shift, and go to state 12

    routine_body   转到状态 13
    compound_stmt  转到状态 14


State 9

    4 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 15

    $default  reduce using rule 7 (const_part)

    const_part  转到状态 16


State 10

    2 program_head: PROGRAM id SEMI .

    $default  reduce using rule 2 (program_head)


State 11

    1 program: program_head routine DOT .

    $default  reduce using rule 1 (program)


State 12

   65 compound_stmt: BEGIN_T . stmt_list END

    error     shift, and go to state 17
    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    CASE      shift, and go to state 22
    GOTO      shift, and go to state 23
    READ      shift, and go to state 24
    INTEGER   shift, and go to state 25
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 26

    END  reduce using rule 67 (stmt_list)

    compound_stmt   转到状态 27
    stmt_list       转到状态 28
    stmt            转到状态 29
    non_label_stmt  转到状态 30
    assign_stmt     转到状态 31
    proc_stmt       转到状态 32
    if_stmt         转到状态 33
    repeat_stmt     转到状态 34
    while_stmt      转到状态 35
    for_stmt        转到状态 36
    case_stmt       转到状态 37
    goto_stmt       转到状态 38
    id              转到状态 39
    sys_proc        转到状态 40
    error_stmt      转到状态 41


State 13

    3 routine: routine_head routine_body .

    $default  reduce using rule 3 (routine)


State 14

   64 routine_body: compound_stmt .

    $default  reduce using rule 64 (routine_body)


State 15

    6 const_part: CONST . const_expr_list

    error  shift, and go to state 17
    ID     shift, and go to state 4

    const_expr_list  转到状态 42
    id               转到状态 43
    error_stmt       转到状态 44


State 16

    4 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 45

    $default  reduce using rule 18 (type_part)

    type_part  转到状态 46


State 17

  138 error_stmt: error . SEMI

    SEMI  shift, and go to state 47


State 18

   88 if_stmt: IF . expression THEN stmt else_clause

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 58
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 19

   91 repeat_stmt: REPEAT . stmt UNTIL expression

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    CASE      shift, and go to state 22
    GOTO      shift, and go to state 23
    READ      shift, and go to state 24
    INTEGER   shift, and go to state 25
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 26

    compound_stmt   转到状态 27
    stmt            转到状态 65
    non_label_stmt  转到状态 30
    assign_stmt     转到状态 31
    proc_stmt       转到状态 32
    if_stmt         转到状态 33
    repeat_stmt     转到状态 34
    while_stmt      转到状态 35
    for_stmt        转到状态 36
    case_stmt       转到状态 37
    goto_stmt       转到状态 38
    id              转到状态 39
    sys_proc        转到状态 40


State 20

   92 while_stmt: WHILE . expression DO stmt

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 66
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 21

   93 for_stmt: FOR . id ASSIGN expression direction expression DO stmt

    ID  shift, and go to state 4

    id  转到状态 67


State 22

   96 case_stmt: CASE . expression OF case_expr_list END

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 68
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 23

  101 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 69


State 24

   87 proc_stmt: READ . LP factor RP

    LP  shift, and go to state 70


State 25

   69 stmt: INTEGER . COLON non_label_stmt

    COLON  shift, and go to state 71


State 26

  136 sys_proc: SYS_PROC .

    $default  reduce using rule 136 (sys_proc)


State 27

   73 non_label_stmt: compound_stmt .

    $default  reduce using rule 73 (non_label_stmt)


State 28

   65 compound_stmt: BEGIN_T stmt_list . END

    END  shift, and go to state 72


State 29

   66 stmt_list: stmt . SEMI stmt_list

    SEMI  shift, and go to state 73


State 30

   70 stmt: non_label_stmt .

    $default  reduce using rule 70 (stmt)


State 31

   71 non_label_stmt: assign_stmt .

    $default  reduce using rule 71 (non_label_stmt)


State 32

   72 non_label_stmt: proc_stmt .

    $default  reduce using rule 72 (non_label_stmt)


State 33

   74 non_label_stmt: if_stmt .

    $default  reduce using rule 74 (non_label_stmt)


State 34

   75 non_label_stmt: repeat_stmt .

    $default  reduce using rule 75 (non_label_stmt)


State 35

   76 non_label_stmt: while_stmt .

    $default  reduce using rule 76 (non_label_stmt)


State 36

   77 non_label_stmt: for_stmt .

    $default  reduce using rule 77 (non_label_stmt)


State 37

   78 non_label_stmt: case_stmt .

    $default  reduce using rule 78 (non_label_stmt)


State 38

   79 non_label_stmt: goto_stmt .

    $default  reduce using rule 79 (non_label_stmt)


State 39

   80 assign_stmt: id . ASSIGN expression
   81            | id . LB expression RB ASSIGN expression
   82            | id . DOT id ASSIGN expression
   83 proc_stmt: id .
   84          | id . LP args_list RP

    LP      shift, and go to state 74
    LB      shift, and go to state 75
    DOT     shift, and go to state 76
    ASSIGN  shift, and go to state 77

    $default  reduce using rule 83 (proc_stmt)


State 40

   85 proc_stmt: sys_proc .
   86          | sys_proc . LP expression_list RP

    LP  shift, and go to state 78

    $default  reduce using rule 85 (proc_stmt)


State 41

   68 stmt_list: error_stmt . stmt_list

    error     shift, and go to state 17
    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    CASE      shift, and go to state 22
    GOTO      shift, and go to state 23
    READ      shift, and go to state 24
    INTEGER   shift, and go to state 25
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 26

    END  reduce using rule 67 (stmt_list)

    compound_stmt   转到状态 27
    stmt_list       转到状态 79
    stmt            转到状态 29
    non_label_stmt  转到状态 30
    assign_stmt     转到状态 31
    proc_stmt       转到状态 32
    if_stmt         转到状态 33
    repeat_stmt     转到状态 34
    while_stmt      转到状态 35
    for_stmt        转到状态 36
    case_stmt       转到状态 37
    goto_stmt       转到状态 38
    id              转到状态 39
    sys_proc        转到状态 40
    error_stmt      转到状态 41


State 42

    6 const_part: CONST const_expr_list .

    $default  reduce using rule 6 (const_part)


State 43

    8 const_expr_list: id . EQUAL const_value SEMI const_expr_list
    9                | id . EQUAL const_value SEMI

    EQUAL  shift, and go to state 80


State 44

   10 const_expr_list: error_stmt . const_expr_list
   11                | error_stmt .

    error  shift, and go to state 17
    ID     shift, and go to state 4

    FUNCTION   reduce using rule 11 (const_expr_list)
    PROCEDURE  reduce using rule 11 (const_expr_list)
    BEGIN_T    reduce using rule 11 (const_expr_list)
    TYPE       reduce using rule 11 (const_expr_list)
    VAR        reduce using rule 11 (const_expr_list)

    const_expr_list  转到状态 81
    id               转到状态 43
    error_stmt       转到状态 44


State 45

   17 type_part: TYPE . type_decl_list

    error  shift, and go to state 17
    ID     shift, and go to state 4

    type_decl_list   转到状态 82
    type_definition  转到状态 83
    id               转到状态 84
    error_stmt       转到状态 85


State 46

    4 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 86

    $default  reduce using rule 42 (var_part)

    var_part  转到状态 87


State 47

  138 error_stmt: error SEMI .

    $default  reduce using rule 138 (error_stmt)


State 48

  126 factor: LP . expression RP

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 88
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 49

  128 factor: MINUS . factor

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    factor       转到状态 89
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 50

  127 factor: NOT . factor

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    factor       转到状态 90
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 51

   12 const_value: INTEGER .

    $default  reduce using rule 12 (const_value)


State 52

   13 const_value: REAL .

    $default  reduce using rule 13 (const_value)


State 53

   14 const_value: CHAR .

    $default  reduce using rule 14 (const_value)


State 54

   15 const_value: STRING .

    $default  reduce using rule 15 (const_value)


State 55

  134 sys_con: SYS_CON .

    $default  reduce using rule 134 (sys_con)


State 56

  135 sys_funct: SYS_FUNCT .

    $default  reduce using rule 135 (sys_funct)


State 57

  125 factor: const_value .

    $default  reduce using rule 125 (factor)


State 58

   88 if_stmt: IF expression . THEN stmt else_clause
  104 expression: expression . GE expr
  105           | expression . GT expr
  106           | expression . LE expr
  107           | expression . LT expr
  108           | expression . EQUAL expr
  109           | expression . UNEQUAL expr

    GE       shift, and go to state 91
    GT       shift, and go to state 92
    LE       shift, and go to state 93
    LT       shift, and go to state 94
    EQUAL    shift, and go to state 95
    UNEQUAL  shift, and go to state 96
    THEN     shift, and go to state 97


State 59

  110 expression: expr .
  111 expr: expr . PLUS term
  112     | expr . MINUS term
  113     | expr . OR term

    PLUS   shift, and go to state 98
    MINUS  shift, and go to state 99
    OR     shift, and go to state 100

    $default  reduce using rule 110 (expression)


State 60

  114 expr: term .
  115 term: term . MUL factor
  116     | term . INTDIV factor
  117     | term . REALDIV factor
  118     | term . MOD factor
  119     | term . AND factor

    MUL      shift, and go to state 101
    REALDIV  shift, and go to state 102
    INTDIV   shift, and go to state 103
    MOD      shift, and go to state 104
    AND      shift, and go to state 105

    $default  reduce using rule 114 (expr)


State 61

  120 term: factor .

    $default  reduce using rule 120 (term)


State 62

  121 factor: id .
  122       | id . LP args_list RP
  129       | id . LB expression RB
  130       | id . DOT id

    LP   shift, and go to state 106
    LB   shift, and go to state 107
    DOT  shift, and go to state 108

    $default  reduce using rule 121 (factor)


State 63

   16 const_value: sys_con .

    $default  reduce using rule 16 (const_value)


State 64

  123 factor: sys_funct .
  124       | sys_funct . LP args_list RP

    LP  shift, and go to state 109

    $default  reduce using rule 123 (factor)


State 65

   91 repeat_stmt: REPEAT stmt . UNTIL expression

    UNTIL  shift, and go to state 110


State 66

   92 while_stmt: WHILE expression . DO stmt
  104 expression: expression . GE expr
  105           | expression . GT expr
  106           | expression . LE expr
  107           | expression . LT expr
  108           | expression . EQUAL expr
  109           | expression . UNEQUAL expr

    GE       shift, and go to state 91
    GT       shift, and go to state 92
    LE       shift, and go to state 93
    LT       shift, and go to state 94
    EQUAL    shift, and go to state 95
    UNEQUAL  shift, and go to state 96
    DO       shift, and go to state 111


State 67

   93 for_stmt: FOR id . ASSIGN expression direction expression DO stmt

    ASSIGN  shift, and go to state 112


State 68

   96 case_stmt: CASE expression . OF case_expr_list END
  104 expression: expression . GE expr
  105           | expression . GT expr
  106           | expression . LE expr
  107           | expression . LT expr
  108           | expression . EQUAL expr
  109           | expression . UNEQUAL expr

    GE       shift, and go to state 91
    GT       shift, and go to state 92
    LE       shift, and go to state 93
    LT       shift, and go to state 94
    EQUAL    shift, and go to state 95
    UNEQUAL  shift, and go to state 96
    OF       shift, and go to state 113


State 69

  101 goto_stmt: GOTO INTEGER .

    $default  reduce using rule 101 (goto_stmt)


State 70

   87 proc_stmt: READ LP . factor RP

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    factor       转到状态 114
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 71

   69 stmt: INTEGER COLON . non_label_stmt

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    CASE      shift, and go to state 22
    GOTO      shift, and go to state 23
    READ      shift, and go to state 24
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 26

    compound_stmt   转到状态 27
    non_label_stmt  转到状态 115
    assign_stmt     转到状态 31
    proc_stmt       转到状态 32
    if_stmt         转到状态 33
    repeat_stmt     转到状态 34
    while_stmt      转到状态 35
    for_stmt        转到状态 36
    case_stmt       转到状态 37
    goto_stmt       转到状态 38
    id              转到状态 39
    sys_proc        转到状态 40


State 72

   65 compound_stmt: BEGIN_T stmt_list END .

    $default  reduce using rule 65 (compound_stmt)


State 73

   66 stmt_list: stmt SEMI . stmt_list

    error     shift, and go to state 17
    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 18
    REPEAT    shift, and go to state 19
    WHILE     shift, and go to state 20
    FOR       shift, and go to state 21
    CASE      shift, and go to state 22
    GOTO      shift, and go to state 23
    READ      shift, and go to state 24
    INTEGER   shift, and go to state 25
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 26

    END  reduce using rule 67 (stmt_list)

    compound_stmt   转到状态 27
    stmt_list       转到状态 116
    stmt            转到状态 29
    non_label_stmt  转到状态 30
    assign_stmt     转到状态 31
    proc_stmt       转到状态 32
    if_stmt         转到状态 33
    repeat_stmt     转到状态 34
    while_stmt      转到状态 35
    for_stmt        转到状态 36
    case_stmt       转到状态 37
    goto_stmt       转到状态 38
    id              转到状态 39
    sys_proc        转到状态 40
    error_stmt      转到状态 41


State 74

   84 proc_stmt: id LP . args_list RP

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 117
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    args_list    转到状态 118
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 75

   81 assign_stmt: id LB . expression RB ASSIGN expression

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 119
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 76

   82 assign_stmt: id DOT . id ASSIGN expression

    ID  shift, and go to state 4

    id  转到状态 120


State 77

   80 assign_stmt: id ASSIGN . expression

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value  转到状态 57
    expression   转到状态 121
    expr         转到状态 59
    term         转到状态 60
    factor       转到状态 61
    id           转到状态 62
    sys_con      转到状态 63
    sys_funct    转到状态 64


State 78

   86 proc_stmt: sys_proc LP . expression_list RP

    LP         shift, and go to state 48
    MINUS      shift, and go to state 49
    NOT        shift, and go to state 50
    INTEGER    shift, and go to state 51
    REAL       shift, and go to state 52
    CHAR       shift, and go to state 53
    ID         shift, and go to state 4
    STRING     shift, and go to state 54
    SYS_CON    shift, and go to state 55
    SYS_FUNCT  shift, and go to state 56

    const_value      转到状态 57
    expression_list  转到状态 122
    expression       转到状态 123
    expr             转到状态 59
    term             转到状态 60
    factor           转到状态 61
    id               转到状态 62
    sys_con          转到状态 63
    sys_funct        转到状态 64


State 79

   68 stmt_list: error_stmt stmt_list .

    $default  reduce using rule 68 (stmt_list)


State 80

    8 const_expr_list: id EQUAL . const_value SEMI const_expr_list
    9                | id EQUAL . const_value SEMI

    INTEGER  shift, and go to state 51
    REAL     shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54
    SYS_CON  shift, and go to state 55

    const_value  转到状态 124
    sys_con      转到状态 63


State 81

   10 const_expr_list: error_stmt const_expr_list .

    $default  reduce using rule 10 (const_expr_list)


State 82

   17 type_part: TYPE type_decl_list .

    $default  reduce using rule 17 (type_part)


State 83

   19 type_decl_list: type_definition . type_decl_list
   20               | type_definition .

    error  shift, and go to state 17
    ID     shift, and go to state 4

    FUNCTION   reduce using rule 20 (type_decl_list)
    PROCEDURE  reduce using rule 20 (type_decl_list)
    BEGIN_T    reduce using rule 20 (type_decl_list)
    VAR        reduce using rule 20 (type_decl_list)

    type_decl_list   转到状态 125
    type_definition  转到状态 83
    id               转到状态 84
    error_stmt       转到状态 85


State 84

   23 type_definition: id . EQUAL type_decl SEMI

    EQUAL  shift, and go to state 126


State 85

   21 type_decl_list: error_stmt . type_decl_list
   22               | error_stmt .

    error  shift, and go to state 17
    ID     shift, and go to state 4

    FUNCTION   reduce using rule 22 (type_decl_list)
    PROCEDURE  reduce using rule 22 (type_decl_list)
    BEGIN_T    reduce using rule 22 (type_decl_list)
    VAR        reduce using rule 22 (type_decl_list)

    type_decl_list   转到状态 127
    type_definition  转到状态 83
    id               转到状态 84
    error_stmt       转到状态 85


State 86

   41 var_part: VAR . var_decl_list

    error  shift, and go to state 17
    ID     shift, and go to state 4

    name_list      转到状态 128
    var_decl_list  转到状态 129
    var_decl       转到状态 130
    id             转到状态 131
    error_stmt     转到状态 132


State 87

    4 routine_head: label_part const_part type_part var_part . routine_part

    FUNCTION   shift, and go to state 133
    PROCEDURE  shift, and go to state 134

    $default  reduce using rule 50 (routine_part)

    routine_part    转到状态 135
    function_decl   转到状态 136
    function_head   转到状态 137
    procedure_decl  转到状态 138
    procedure_head  转到状态 139


State 88
